plugins {
    id("io.papermc.paperweight.userdev")
}

group = 'com.artillexstudios.axapi.nms.v1_20_R4'
version = rootProject.version

dependencies {
    paperweight.paperDevBundle("1.20.5-R0.1-SNAPSHOT")
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

tasks {
    build {
        dependsOn(reobfJar)
    }

    reobfJar {
        mustRunAfter(shadowJar)
    }
}